--- a/package.json
+++ b/package.json
@@ -9,18 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@sanity/client": "^6.19.1",
+    "@tanstack/react-query": "^5.40.0",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "@web3auth/ethereum-provider": "^8.6.2",
+    "@web3auth/openlogin-adapter": "^8.6.2",
+    "@web3auth/web3auth": "^2.1.3",
+    "@web3modal/wagmi": "^4.2.3",
+    "chart.js": "^4.4.3",
+    "gun": "^0.2020.1240",
+    "magic-sdk": "^28.0.3",
+    "moralis": "^2.26.2",
+    "moralis-v1": "^1.13.0",
+    "next": "14.2.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-moralis": "^1.4.2",
+    "react-switch": "^7.0.0",
+    "sharp": "^0.33.4",
+    "viem": "^2.13.2",
+    "wagmi": "^2.9.8",
+    "web3uikit": "^0.1.170"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/sharp": "^0.32.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "tweetnacl": "^1.0.3",
+    "typescript": "^5"
   }
 }
